Transform to LakeHouse architect workflow toolkit with calm lake blue theme

--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
                     <a href="#home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#services" class="nav-link">Services</a>
+                    <a href="#features" class="nav-link">Features</a>
+                </li>
+                <li class="nav-item">
+                    <a href="resources.html" class="nav-link">Resources</a>
+                </li>
+                <li class="nav-item">
+                    <a href="demo.html" class="nav-link">Demo</a>
                 </li>
                 <li class="nav-item">
                     <a href="#about" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#contact" class="nav-link">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
@@ -40,14 +43,15 @@
     <section id="home" class="hero">
         <div class="hero-container">
             <div class="hero-content">
-                <h1 class="hero-title">LakeHouse Software Solution</h1>
+                <h1 class="hero-title">LakeHouse</h1>
+                <h2 class="hero-subtitle">Architect Workflow Toolkit</h2>
                 <p class="hero-description">
-                    Transforming your business with cutting-edge software solutions. 
-                    We build scalable, innovative, and reliable systems that drive your success.
+                    Streamline your architectural workflow with powerful, intuitive tools. 
+                    Design, collaborate, and deliver exceptional projects with ease and precision.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#contact" class="btn btn-primary">Get Started</a>
-                    <a href="#services" class="btn btn-secondary">Learn More</a>
+                    <a href="resources.html" class="btn btn-primary">Get Started</a>
+                    <a href="#features" class="btn btn-secondary">Explore Features</a>
                 </div>
             </div>
             <div class="hero-visual">
@@ -63,30 +67,30 @@
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="services">
+    <!-- Features Section -->
+    <section id="features" class="features">
         <div class="container">
-            <h2 class="section-title">Our Services</h2>
-            <div class="services-grid">
-                <div class="service-card">
-                    <div class="service-icon">🚀</div>
-                    <h3>Web Development</h3>
-                    <p>Modern, responsive websites and web applications built with the latest technologies.</p>
+            <h2 class="section-title">Powerful Features</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">🏗️</div>
+                    <h3>Design Tools</h3>
+                    <p>Advanced parametric design tools that adapt to your architectural workflow and design process.</p>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">📱</div>
-                    <h3>Mobile Apps</h3>
-                    <p>Native and cross-platform mobile applications for iOS and Android.</p>
+                <div class="feature-card">
+                    <div class="feature-icon">🔄</div>
+                    <h3>Workflow Automation</h3>
+                    <p>Streamline repetitive tasks and focus on creative design with intelligent automation features.</p>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">☁️</div>
-                    <h3>Cloud Solutions</h3>
-                    <p>Scalable cloud infrastructure and migration services for your business.</p>
+                <div class="feature-card">
+                    <div class="feature-icon">👥</div>
+                    <h3>Team Collaboration</h3>
+                    <p>Seamless collaboration tools for architects, designers, and project teams working together.</p>
                 </div>
-                <div class="service-card">
-                    <div class="service-icon">🔧</div>
-                    <h3>Custom Software</h3>
-                    <p>Tailored software solutions designed specifically for your business needs.</p>
+                <div class="feature-card">
+                    <div class="feature-icon">📊</div>
+                    <h3>Data Visualization</h3>
+                    <p>Transform complex architectural data into beautiful, interactive visualizations and reports.</p>
                 </div>
             </div>
         </div>
@@ -99,62 +103,63 @@
                 <div class="about-text">
                     <h2 class="section-title">About LakeHouse</h2>
                     <p>
-                        At LakeHouse Software Solution, we're passionate about creating innovative software 
-                        that solves real-world problems. Our team of experienced developers and designers 
-                        work closely with clients to deliver exceptional digital experiences.
+                        LakeHouse is a comprehensive architect workflow toolkit designed to enhance and streamline 
+                        your design process. Born from the need for better tools in architectural practice, 
+                        we combine cutting-edge technology with intuitive design.
                     </p>
                     <p>
-                        With years of experience in the industry, we've helped businesses of all sizes 
-                        transform their operations through technology. From startups to enterprises, 
-                        we provide the expertise and support you need to succeed.
+                        Whether you're working on residential projects, commercial developments, or urban planning, 
+                        LakeHouse provides the tools and workflows you need to bring your architectural vision to life 
+                        with precision and efficiency.
                     </p>
                 </div>
                 <div class="about-stats">
                     <div class="stat">
+                        <h3>1000+</h3>
+                        <p>Architects Using</p>
+                    </div>
+                    <div class="stat">
+                        <h3>10K+</h3>
+                        <p>Projects Created</p>
+                    </div>
+                    <div class="stat">
                         <h3>50+</h3>
-                        <p>Projects Completed</p>
-                    </div>
-                    <div class="stat">
-                        <h3>5+</h3>
-                        <p>Years Experience</p>
-                    </div>
-                    <div class="stat">
-                        <h3>100%</h3>
-                        <p>Client Satisfaction</p>
+                        <p>Workflow Tools</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- Contact Section -->
-    <section id="contact" class="contact">
+    <!-- Get Started Section -->
+    <section id="get-started" class="get-started">
         <div class="container">
-            <h2 class="section-title">Get In Touch</h2>
-            <div class="contact-content">
-                <div class="contact-info">
-                    <h3>Let's Start a Conversation</h3>
-                    <p>Ready to transform your business with innovative software solutions? 
-                       We'd love to hear about your project.</p>
-                    <div class="contact-item">
-                        <strong>Email:</strong> hello@lakehouse-software.com
-                    </div>
-                    <div class="contact-item">
-                        <strong>Phone:</strong> +1 (555) 123-4567
+            <h2 class="section-title">Ready to Transform Your Workflow?</h2>
+            <div class="get-started-content">
+                <div class="get-started-info">
+                    <h3>Start Your Architectural Journey</h3>
+                    <p>Join thousands of architects who have already enhanced their workflow with LakeHouse. 
+                       Get started with our comprehensive toolkit today.</p>
+                    <div class="quick-links">
+                        <a href="resources.html" class="quick-link">
+                            <span class="link-icon">📚</span>
+                            <span>Installation Guide</span>
+                        </a>
+                        <a href="demo.html" class="quick-link">
+                            <span class="link-icon">🎮</span>
+                            <span>Try Demo</span>
+                        </a>
                     </div>
                 </div>
-                <form class="contact-form">
-                    <div class="form-group">
-                        <input type="text" placeholder="Your Name" required>
+                <div class="get-started-visual">
+                    <div class="workflow-preview">
+                        <div class="workflow-step">Design</div>
+                        <div class="workflow-arrow">→</div>
+                        <div class="workflow-step">Collaborate</div>
+                        <div class="workflow-arrow">→</div>
+                        <div class="workflow-step">Deliver</div>
                     </div>
-                    <div class="form-group">
-                        <input type="email" placeholder="Your Email" required>
-                    </div>
-                    <div class="form-group">
-                        <textarea placeholder="Your Message" rows="5" required></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
+                </div>
             </div>
         </div>
     </section>
@@ -165,7 +170,7 @@
             <div class="footer-content">
                 <div class="footer-brand">
                     <h3>LakeHouse</h3>
-                    <p>Software Solution</p>
+                    <p>Architect Workflow Toolkit</p>
                 </div>
                 <div class="footer-links">
                     <a href="#home">Home</a>
@@ -175,7 +180,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 LakeHouse Software Solution. All rights reserved.</p>
+                <p>&copy; 2024 LakeHouse Architect Workflow Toolkit. All rights reserved.</p>
             </div>
         </div>
     </footer>
