Add installation section with image placeholder before gallery section

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <a href="#features" class="nav-link">Features</a>
                 </li>
                 <li class="nav-item">
+                    <a href="#installation" class="nav-link">Installation</a>
+                </li>
+                <li class="nav-item">
                     <a href="#gallery" class="nav-link">Gallery</a>
                 </li>
                 <li class="nav-item">
@@ -91,6 +94,44 @@
                     <div class="feature-icon">📊</div>
                     <h3>Data Visualization</h3>
                     <p>Transform complex architectural data into beautiful, interactive visualizations and reports.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Installation Section -->
+    <section id="installation" class="installation-section">
+        <div class="container">
+            <div class="installation-content">
+                <div class="installation-info">
+                    <h2 class="section-title">Easy Installation</h2>
+                    <p class="installation-description">
+                        Get started with LakeHouse in just a few simple steps. Our streamlined installation 
+                        process gets you up and running quickly so you can focus on what matters most - your architectural work.
+                    </p>
+                    <div class="installation-steps">
+                        <div class="step">
+                            <span class="step-number">1</span>
+                            <span class="step-text">Download the installer package</span>
+                        </div>
+                        <div class="step">
+                            <span class="step-number">2</span>
+                            <span class="step-text">Run the setup wizard</span>
+                        </div>
+                        <div class="step">
+                            <span class="step-number">3</span>
+                            <span class="step-text">Launch and start creating</span>
+                        </div>
+                    </div>
+                    <a href="resources.html" class="btn btn-primary">Download Now</a>
+                </div>
+                <div class="installation-visual">
+                    <div class="installation-image">
+                        <div class="installation-placeholder">
+                            <span class="placeholder-text">Installation Screenshot</span>
+                            <small>Place your installation.png here</small>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -232,6 +273,7 @@
                 <div class="footer-links">
                     <a href="#home">Home</a>
                     <a href="#features">Features</a>
+                    <a href="#installation">Installation</a>
                     <a href="#gallery">Gallery</a>
                     <a href="resources.html">Resources</a>
                     <a href="#about">About</a>
