--- a/index.html
+++ b/index.html
@@ -24,12 +24,6 @@
                 <li class="nav-item">
                     <a href="#gallery" class="nav-link">Gallery</a>
                 </li>
-                <li class="nav-item">
-                    <a href="resources.html" class="nav-link">Resources</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#about" class="nav-link">About</a>
-                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -44,14 +38,13 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">LakeHouse</h1>
-                <h2 class="hero-subtitle">Architect Workflow Toolkit(Beta)</h2>
+                <h2 class="hero-subtitle">(Beta)</h2>
                 <p class="hero-description">
-                    Go Home Earlier.
-                    
+                    Let Architects Go Home Early Again.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#installation" class="btn btn-primary">Installation Guide</a>
-                    <a href="#gallery" class="btn btn-secondary">Gallery</a>
+                    <a href="#gallery" class="btn btn-primary">Sample Feature</a>
+                    <a href="#installation" class="btn btn-secondary">Installation Guide</a>
                 </div>
             </div>
             <div class="hero-visual">
@@ -67,38 +60,7 @@
         </div>
     </section>
 
-    <!-- Installation Section -->
-    <section id="installation" class="installation-section">
-        <div class="container">
-            <div class="installation-content">
-                <div class="installation-info">
-                    <h2 class="section-title">Installation Guide</h2>
-                    <p class="installation-description">
-                        Install LakeHouse from Rhino 8+ package manager.
-                    </p>
-                    <div class="installation-steps">
-                        <div class="step">
-                            <span class="step-number">1</span>
-                            <span class="step-text">Type in "PackageManager" at Rhino 8+ command line</span>
-                        </div>
-                        <div class="step">
-                            <span class="step-number">2</span>
-                            <span class="step-text">Search "LakeHouse" in the search bar</span>
-                        </div>
-                        <div class="step">
-                            <span class="step-number">3</span>
-                            <span class="step-text">Click "Install", and allow automatic update when Rhino starts</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="installation-visual">
-                    <div class="installation-image">
-                        <img src="asset/installation/package manager.png" alt="LakeHouse Installation Package Manager" onclick="openModal('asset/installation/package manager.png')">
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- Screenshot Gallery Section -->
     <section id="gallery" class="screenshot-gallery">
@@ -213,41 +175,39 @@
         </div>
     </div>
 
-    <!-- About Section -->
-    <section id="about" class="about">
+
+    <!-- Installation Section -->
+    <section id="installation" class="installation-section">
         <div class="container">
-            <div class="about-content">
-                <div class="about-text">
-                    <h2 class="section-title">About LakeHouse</h2>
-                    <p>
-                        LakeHouse is a comprehensive architect workflow toolkit designed to enhance and streamline 
-                        your design process. Born from the need for better tools in architectural practice, 
-                        we combine cutting-edge technology with intuitive design.
+            <div class="installation-content">
+                <div class="installation-info">
+                    <h2 class="section-title">Installation Guide</h2>
+                    <p class="installation-description">
+                        Install LakeHouse from Rhino 8+ package manager.
                     </p>
-                    <p>
-                        Whether you're working on residential projects, commercial developments, or urban planning, 
-                        LakeHouse provides the tools and workflows you need to bring your architectural vision to life 
-                        with precision and efficiency.
-                    </p>
+                    <div class="installation-steps">
+                        <div class="step">
+                            <span class="step-number">1</span>
+                            <span class="step-text">Type in "PackageManager" at Rhino 8+ command line</span>
+                        </div>
+                        <div class="step">
+                            <span class="step-number">2</span>
+                            <span class="step-text">Search "LakeHouse" in the search bar</span>
+                        </div>
+                        <div class="step">
+                            <span class="step-number">3</span>
+                            <span class="step-text">Click "Install", and allow automatic update when Rhino starts</span>
+                        </div>
+                    </div>
                 </div>
-                <div class="about-stats">
-                    <div class="stat">
-                        <h3>1000+</h3>
-                        <p>Architects Using</p>
-                    </div>
-                    <div class="stat">
-                        <h3>10K+</h3>
-                        <p>Projects Created</p>
-                    </div>
-                    <div class="stat">
-                        <h3>50+</h3>
-                        <p>Workflow Tools</p>
+                <div class="installation-visual">
+                    <div class="installation-image">
+                        <img src="asset/installation/package manager.png" alt="LakeHouse Installation Package Manager" onclick="openModal('asset/installation/package manager.png')">
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 
 
     <!-- Footer -->
@@ -262,8 +222,6 @@
                     <a href="#home">Home</a>
                     <a href="#installation">Installation</a>
                     <a href="#gallery">Gallery</a>
-                    <a href="resources.html">Resources</a>
-                    <a href="#about">About</a>
                 </div>
             </div>
             <div class="footer-bottom">
