--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         class="demo-video"
                         onloadstart="this.volume=0"
                     >
-                        <source src="asset/areatakeoff/Recording-20250625_212510.webm" type="video/webm">
+                        <source src="asset/areatakeoff/video.webm" type="video/webm">
                         <source src="asset/areatakeoff/video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
                     </video>
