--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <div class="floating-card">
+                <div class="floating-card wide">
                     <div class="card-header"></div>
                     <div class="card-content">
                         <div class="line"></div>
@@ -95,7 +95,7 @@
             <div class="screenshot-item">
                 <div class="screenshot-container">
                     <div class="screenshot-info">
-                        <h3>Area Summary Right In Front Of You.</h3>
+                        <h3>Area Summary<br>Right In Front Of You</h3>
                   
                         <ul class="screenshot-features">
                             <li>Interactive Drawing Viewport</li>
@@ -114,7 +114,7 @@
             <div class="screenshot-item">
                 <div class="screenshot-container reverse">
                     <div class="screenshot-info">
-                        <h3>Simple Management By Layer Name</h3>
+                        <h3>Simple Management<br>By Layer Name</h3>
                        
                         <ul class="screenshot-features">
                             <li>Just Need [GFA] In The Layer Name As Keyword.</li>
