--- a/index.html
+++ b/index.html
@@ -48,12 +48,25 @@
                 </div>
             </div>
             <div class="hero-visual">
-                <div class="floating-card wide">
-                    <div class="card-header"></div>
-                    <div class="card-content">
-                        <div class="line"></div>
-                        <div class="line short"></div>
-                        <div class="line"></div>
+                <div class="hero-cards-container">
+                    
+                    <div class="floating-card">
+                        <div class="card-header areatakeoff"></div>
+                        <div class="card-content">
+                            <div class="line"></div>
+                            <div class="line short"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div class="card-title">AreaTakeOff</div>
+                    </div>
+                    <div class="floating-card">
+                        <div class="card-header objmanager"></div>
+                        <div class="card-content">
+                            <div class="line"></div>
+                            <div class="line short"></div>
+                            <div class="line"></div>
+                        </div>
+                        <div class="card-title">ObjManager</div>
                     </div>
                 </div>
             </div>
