--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                 <li class="nav-item">
                     <a href="feature_areatakeoff.html" class="nav-link">AreaTakeOff</a>
                 </li>
+                <li class="nav-item">
+                    <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -43,7 +46,7 @@
                     Let Architects Go Home Early Again.
                 </p>
                 <div class="hero-buttons">
-                    <a href="feature_areatakeoff.html" class="btn btn-primary">AreaTakeOff Feature</a>
+                    <a href="feature_areatakeoff.html" class="btn btn-primary">Key Feature</a>
                     <a href="#installation" class="btn btn-secondary">Installation Guide</a>
                 </div>
             </div>
@@ -59,7 +62,7 @@
                         </div>
                         <div class="card-title">AreaTakeOff</div>
                     </a>
-                    <div class="floating-card">
+                    <a href="feature_objmanager.html" class="floating-card" style="text-decoration: none; cursor: pointer;">
                         <div class="card-header objmanager"></div>
                         <div class="card-content">
                             <div class="line"></div>
@@ -67,7 +70,7 @@
                             <div class="line"></div>
                         </div>
                         <div class="card-title">ObjManager</div>
-                    </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -123,7 +126,7 @@
                 <div class="footer-links">
                     <a href="#home">Home</a>
                     <a href="#installation">Installation</a>
-                    <a href="feature_areatakeoff.html">AreaTakeOff</a>
+                   
                 </div>
             </div>
             <div class="footer-bottom">
