--- a/feature_objmanager.html
+++ b/feature_objmanager.html
@@ -42,7 +42,7 @@
             <div class="hero-content" style="text-align: center;">
                 <h1 class="hero-title">ObjManager</h1>
                 <p class="hero-description">
-                    Batch Object Transformation.
+                    Batch Object Transformation
                 </p>
                 <p class="gallery-description">Command: <strong>LakeHouseObjManager</strong></p>
             </div>
@@ -69,7 +69,7 @@
                     </video>
                     <div class="video-overlay">
                         <h3>LakeHouse Object Manager</h3>
-                        <p>Batch Object Transformation.</p>
+                        <p>Batch Object Transformation</p>
                         <p>Command: <strong>LakeHouseObjManager</strong></p>
                     </div>
                 </div>
