--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
                 <div class="footer-links">
                     <a href="#home">Home</a>
                     <a href="#installation">Installation</a>
-                   
+                    <a href="feature_areatakeoff.html">AreaTakeOff</a>
+                    <a href="feature_objmanager.html">ObjManager</a>
                 </div>
             </div>
             <div class="footer-bottom">
