--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
                 </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">Contact</a>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -126,7 +129,7 @@
                 <div class="footer-links">
                     <a href="#home">Home</a>
                     <a href="#installation">Installation</a>
-                   
+                    <a href="contact.html">Contact</a>
                 </div>
             </div>
             <div class="footer-bottom">
