--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="step">
                             <span class="step-number">3</span>
-                            <span class="step-text">Click "Install", and allow automatic update when Rhino starts</span>
+                            <span class="step-text">Pick the latest version, click "Install", and allow automatic update when Rhino starts</span>
                         </div>
                     </div>
                 </div>
