--- a/contact.html
+++ b/contact.html
@@ -79,6 +79,8 @@
                 <div class="footer-links">
                     <a href="index.html">Home</a>
                     <a href="index.html#installation">Installation</a>
+                    <a href="feature_areatakeoff.html">AreaTakeOff</a>
+                    <a href="feature_objmanager.html">ObjManager</a>
                     <a href="contact.html">Contact</a>
                 </div>
             </div>
