--- a/feature_areatakeoff.html
+++ b/feature_areatakeoff.html
@@ -27,6 +27,9 @@
                 <li class="nav-item">
                     <a href="feature_objmanager.html" class="nav-link">ObjManager</a>
                 </li>
+                <li class="nav-item">
+                    <a href="contact.html" class="nav-link">Contact</a>
+                </li>
             </ul>
             <div class="hamburger">
                 <span class="bar"></span>
@@ -168,6 +171,7 @@
                     <a href="index.html#installation">Installation</a>
                     <a href="feature_areatakeoff.html">AreaTakeOff</a>
                     <a href="feature_objmanager.html">ObjManager</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </div>
             <div class="footer-bottom">
