🌙 Perfect dark theme: Refined typography + exact cyan rgb(0,200,200) + minimal roundness + consistent styling across all pages

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - LakeHouse Software Solution</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="contact-content">
                 <div class="contact-header">
-                    <h1 class="section-title">Contact Us</h1>
+                    <h1 class="section-title">Contact Me</h1>
                     <p class="contact-description">
                         Have questions about LakeHouse Plugin?<br>Need support or want to share feedback?<br>I'd love to hear from you.
                     </p>
