--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <div class="contact-header">
                     <h1 class="section-title">Contact Me</h1>
                     <p class="contact-description">
-                        Have questions about LakeHouse Plugin?<br>Need support or want to share feedback?<br>I'd love to hear from you.
+                        Have questions about LakeHouse Plugin?<br>Need support or want to share feedback?<br>Suggestions for more features?<br>I'd love to hear from you.
                     </p>
                 </div>
                 
